--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Piedra, papel o tijera</title>
-    <link rel="stylesheet" href="juego.css"/>
+    <link rel="stylesheet" href="./style.css"/>
 </head>
   <body>
     <div class="page">
@@ -53,7 +53,7 @@
     </div>
 
 
-    <script src="./juego.js"></script>
+    <script src="./main.js"></script>
 
   </body>
 </html>
